--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:no-mock": "cross-env VUE_APP_MOCK=none vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.15",
@@ -21,9 +24,17 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "axios": "^0.19.2",
+    "axios-mock-adapter": "^1.17.0",
+    "cross-env": "^7.0.2",
+    "eslint-config-airbnb": "^18.1.0",
+    "mocker-api": "^1.9.0",
+    "mockjs": "^1.1.0",
     "node-sass": "^4.9.0",
+    "path": "^0.12.7",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "webpack-api-mocker": "^1.7.6"
   },
   "browserslist": [
     "> 1%",
