--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "serve:no-mock": "cross-env VUE_APP_MOCK=none vue-cli-service serve",
+    "serve:mock": "cross-env MOCK=yes vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.15",
@@ -27,7 +24,14 @@
     "axios": "^0.19.2",
     "axios-mock-adapter": "^1.17.0",
     "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-vue": "^6.2.2",
     "mocker-api": "^1.9.0",
     "mockjs": "^1.1.0",
     "node-sass": "^4.9.0",
