--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "serve": "vue-cli-service serve",
     "serve:mock": "cross-env MOCK=yes vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "fix": "eslint  --fix --ext .vue src"
   },
   "dependencies": {
+    "element-ui": "^2.13.0",
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.15",
@@ -28,6 +30,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
