--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "singleQuote": true,
   "trailingComma": "es5",
-  "printWidth": 100,
+  "printWidth": 120,
+  "endOfLine": "lf",
   "overrides": [
     {
       "files": ".prettierrc",
