--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "fix": "eslint  --fix --ext .vue src"
   },
   "dependencies": {
-    "element-ui": "^2.13.0",
+    "element-ui": "^2.13.1",
     "highlight.js": "^9.12.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.15",
+    "prettier": "^2.1.0",
     "vue": "^2.5.16",
     "vue-fancybox": "^1.0.3",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
@@ -29,15 +30,15 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-vue": "^6.2.2",
-    "mocker-api": "^1.9.0",
+    "mocker-api": "^1.14.0",
     "mockjs": "^1.1.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.16",
