--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "jquery": "^3.5.1",
     "lodash": "^4.17.15",
     "prettier": "^2.1.0",
+    "recordrtc": "^5.6.1",
     "vue": "^2.5.16",
     "vue-fancybox": "^1.0.3",
     "vue-router": "^3.0.1",
+    "vue-video-tape": "^1.1.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
